1999-11-21  Ken Manheimer  <klm@python.org>

	* icomplete.el (icomplete-completions): Use an explicit variable
	`icomplete-prospects-length', obviating the need to use an
	apparently faulty throw/catch arrangement.
	
1999-11-21  Eli Zaretskii  <eliz@is.elta.co.il>

	* term/internal.el (IT-display-table-setup): Don't overstep
	character code 255.

1999-11-20  Kenichi Handa  <handa@mule.m17n.org>

	* ps-mule.el (ps-mule-font-info-database-bdf): Default BDF font
	for the charset chinese-sisheng is 7bit encoding, not 8bit.

1999-11-19  Stefan Monnier  <monnier@cs.yale.edu>

	* scroll-bar.el (scroll-bar-toolkit-scroll): Add handling of the 
	`ratio' event for Xaw and Xaw3d(without arrows) scrollbars.

	* files.el (auto-mode-alist): Add patterns for diff-mode.

	* complete.el (PC-do-complete-and-exit): Use minibuffer-prompt-end
	to detect an empty prompt.

1999-11-18  Dave Love  <fx@gnu.org>

	* simple.el (input-mode-8-bit): Fix the customization.

1999-11-18  Gerd Moellmann  <gerd@gnu.org>

	* international/iso-acc.el (iso-languages): Add more
	characters for Portuguese.

	* speedbar.el: Clean up comment at the start of the file.
	Remove RCS id.

	* progmodes/compile.el (compilation-parse-errors): Use
	compilation-buffer-p instead of testing major-mode.

1999-11-18  Dave Pearson  <davep@hagbard.demon.co.uk>

	* quickurl.el Added defcustom of quickurl-completion-ignore-case.
	(quickurl-ask): completion-ignore-case is set to the value of
	quickurl-completion-ignore-case for the duration of the call to
	completing-read.
	
1999-11-18  Richard M. Stallman  <rms@caffeine.ai.mit.edu>

	* mail/rmailedit.el (rmail-cease-edit): Run rmail-mode-hook.

1999-11-18  Kenichi Handa  <handa@etl.go.jp>

	* ps-vars.el: Renamed from ps-print-def.el.  Provide ps-vars
	instead of ps-print-def.

	* ps-print.el: Require ps-vars instead of ps-print-def.

	* ps-mule.el: Require ps-vars instead of ps-print-def.

1999-11-17  Gerd Moellmann  <gerd@gnu.org>
