@@ -356,9 +356,9 @@ that form should be displayed.")
 
 (defun hif-infix-to-prefix (token-list)
   "Convert list of tokens in infix into prefix list"
-;  (message "hif-infix-to-prefix: %s" token-list)
+					;  (message "hif-infix-to-prefix: %s" token-list)
   (if (= 1 (length token-list))
-      (` (hif-lookup (quote (, (car token-list)))))
+      `(hif-lookup (quote ,(car token-list)))
     (hif-parse-if-exp token-list))
   )
 
@@ -489,41 +489,41 @@ that form should be displayed.")
 (defun hif-factor ()
   "Parse a factor: '!' factor | '(' expr ')' | 'defined(' id ')' | id."
   (cond
-    ((eq hif-token 'not)
-     (hif-nexttoken)
-     (list 'not (hif-factor)))
+   ((eq hif-token 'not)
+    (hif-nexttoken)
+    (list 'not (hif-factor)))
 
-    ((eq hif-token 'lparen)
-     (hif-nexttoken)
-     (let ((result (hif-expr)))
-       (if (not (eq hif-token 'rparen))
-	   (error "Bad token in parenthesized expression: %s" hif-token)
-	 (hif-nexttoken)
-	 result)))
-
-    ((eq hif-token 'hif-defined)
-     (hif-nexttoken)
-     (if (not (eq hif-token 'lparen))
-	 (error "Error: expected \"(\" after \"defined\""))
-     (hif-nexttoken)
-     (let ((ident hif-token))
-       (if (memq hif-token '(or and not hif-defined lparen rparen))
-	   (error "Error: unexpected token: %s" hif-token))
-       (hif-nexttoken)
-       (if (not (eq hif-token 'rparen))
-	   (error "Error: expected \")\" after identifier"))
-       (hif-nexttoken)
-       (` (hif-defined (quote (, ident))))
-       ))
-
-    (t ; identifier
-      (let ((ident hif-token))
-	(if (memq ident '(or and))
-	    (error "Error: missing identifier"))
+   ((eq hif-token 'lparen)
+    (hif-nexttoken)
+    (let ((result (hif-expr)))
+      (if (not (eq hif-token 'rparen))
+	  (error "Bad token in parenthesized expression: %s" hif-token)
 	(hif-nexttoken)
-	(` (hif-lookup (quote (, ident))))
-	))
-    ))
+	result)))
+
+   ((eq hif-token 'hif-defined)
+    (hif-nexttoken)
+    (if (not (eq hif-token 'lparen))
+	(error "Error: expected \"(\" after \"defined\""))
+    (hif-nexttoken)
+    (let ((ident hif-token))
+      (if (memq hif-token '(or and not hif-defined lparen rparen))
+	  (error "Error: unexpected token: %s" hif-token))
+      (hif-nexttoken)
+      (if (not (eq hif-token 'rparen))
+	  (error "Error: expected \")\" after identifier"))
+      (hif-nexttoken)
+      `(hif-defined (quote ,ident))
+      ))
+
+   (t					; identifier
+    (let ((ident hif-token))
+      (if (memq ident '(or and))
+	  (error "Error: missing identifier"))
+      (hif-nexttoken)
+      `(hif-lookup (quote ,ident))
+      ))
+   ))
 
 (defun hif-mathify (val)
   "Treat VAL as a number: if it's t or nil, use 1 or 0."
