@@ -1,3 +1,8 @@
+1999-11-21  Gerd Moellmann  <gerd@gnu.org>
+
+	* emacs-lisp/edebug.el, emacs-lisp/cust-print.el,
+	progmodes/hideif.el: Use new backquote syntax.
+
 1999-11-21  Ken Manheimer  <klm@python.org>
 
 	* icomplete.el (icomplete-completions): Use an explicit variable
